<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    android:padding="16dp">    <EditText        android:id="@+id/edit_transaction_title"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="32dp"        android:inputType="text"        android:hint="@string/transaction_name_placeholder"        android:importantForAutofill="no" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <TextView            android:id="@+id/txt_transaction_currency"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textColor="@color/textColorLight"            android:text="@string/currency" />        <EditText            android:layout_weight="1"            android:id="@+id/edit_transaction_amount"            android:layout_width="1dp"            android:layout_height="wrap_content"            android:inputType="numberDecimal"            android:importantForAutofill="no" />        <Spinner            android:id="@+id/spin_transaction_type"            android:layout_weight="1"            android:layout_width="1dp"            android:layout_height="wrap_content"            android:entries="@array/arr_transaction_options"/>    </LinearLayout>    <Button        android:id="@+id/btn_transaction_confirm"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="24dp"        android:background="@drawable/buttons_design"        android:backgroundTint="@color/colorAccent"        android:textColor="#000"        android:text="@string/confirm" /></LinearLayout>