<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorLight"
        android:text="Budget:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/textColorMain"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/txt_budget_integers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/textColorMain"
                android:text="0"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/txt_budget_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text=",00"
                android:textColor="@color/textColorMain"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="1dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_budget_edit"
                android:layout_weight="1"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:text="@string/edit"
                android:textColor="@color/textColorAlt"
                android:background="@drawable/buttons_design" />

            <Button
                android:id="@+id/btn_budget_add"
                android:layout_weight="1"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:background="@drawable/buttons_design"
                android:text="@string/add"
                android:textColor="@color/textColorAlt"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Transactions"
        android:textColor="@color/textColorMain"
        android:layout_marginBottom="24dp"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/list_transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
